--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "jurosh/pdf-merge",
+  "name": "flaurent/pdf-merge",
   "description": "PHP PDF Merger",
   "version": "2.1.0",
   "keywords": [
